envar-demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
     name: envar-demo
     labels:
        purpose: demonstrate-envars
spec:
  containers:
     - name: envar-demo-container
       image: httpd
