nginx-service.yaml

kind: Service 
apiVersion: v1
metadata:
   name: nginx-service 
spec:
  type: NodePort
  ports:
     - port: 80
       nodePort: 30001
  selector:
      app: nginx
